<resources>
    <string name="app_name">TMDB</string>
    <string name="action_discover_movies">Movies</string>
    <string name="action_discover_tv">TV Shows</string>
    <string name="action_refresh">Refresh</string>
    <string name="movieTitle">Title</string>
    <string name="movieRating">Rating</string>
    <string name="movieReleaseDate">Release Date</string>
    <string name="movieRunTime">Run Time</string>
    <string name="movieOverview">Synopsis</string>
</resources>
