<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:id="@+id/movie_poster"
            android:src="@drawable/fsg"
            android:scaleType="center"
            android:contentDescription="@string/movieTitle"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="6dp">

            <TextView
                android:text="@string/movieReleaseDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/movie_detail_releaseDate_heading"
                android:layout_weight="3"
                android:textColor="@android:color/holo_red_dark"
                android:textAppearance="?android:textAppearanceSmall"/>

            <TextView
                android:text="@string/movieReleaseDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:id="@+id/movie_detail_releaseDate"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@android:color/black"
                android:layout_gravity="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="6dp">

            <TextView
                android:text="@string/movieRunTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/movie_detail_runTime_heading"
                android:layout_weight="3"
                android:textColor="@android:color/holo_red_dark"
                android:textAppearance="?android:textAppearanceSmall"/>

            <TextView
                android:text="@string/movieRunTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:id="@+id/movie_detail_runTime"
                android:textColor="@android:color/black"
                android:textAppearance="?android:textAppearanceSmall"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:orientation="horizontal">

            <TextView
                android:text="@string/movieTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/movie_detail_title_heading"
                android:layout_weight="3"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@android:color/holo_red_dark"/>

            <TextView
                android:text="@string/movieTitle"
                android:layout_width="0dp"
                android:layout_weight="7"
                android:layout_height="wrap_content"
                android:id="@+id/movie_detail_title"
                android:textColor="@android:color/black"
                android:textAppearance="?android:textAppearanceSmall"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="6dp">

            <TextView
                android:text="@string/movieOverview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:id="@+id/movie_detail_overview_heading"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@android:color/holo_red_dark"/>

            <TextView
                android:text="@string/movieOverview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:id="@+id/movie_detail_overview"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@android:color/black"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="6dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/movie_detail"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>